@@ -1,0 +1,30 @@
+/*
+ * defines for the malloc-debug library
+ *
+ * Copyright 1993 by the Antaire Corporation
+ *
+ * This file is part of the malloc-debug package.
+ *
+ * Permission to use, copy, modify, and distribute this software for any
+ * purpose and without fee is hereby granted, provided that the above
+ * copyright notice and this permission notice appear in all copies, and that
+ * the name of Antaire not be used in advertising or publicity pertaining to
+ * distribution of the document or software without specific, written prior
+ * permission.
+ *
+ * The Antaire Corporation makes no representations about the suitability of
+ * the software described herein for any purpose.  It is provided "as is"
+ * without express or implied warranty.
+ *
+ * The author of the program may be contacted at gray.watson@antaire.com
+ *
+ * $Id: dmalloc.h.1,v 1.1 1993/08/27 00:07:44 gray Exp $
+ */
+
+#ifndef __MALLOC_DBG_H__
+#define __MALLOC_DBG_H__
+
+/*
+ * for those systems who do not understand const define to nothing
+ */
+#undef const
